--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,13 +27,52 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#fff">
+            android:animateLayoutChanges="true"
+            android:background="#fff"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textview1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:text="text1" />
+
+            <TextView
+                android:id="@+id/textview2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:text="text2" />
+
+            <TextView
+                android:id="@+id/textview3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:visibility="gone"
+                android:text="text3" />
 
             <EditText
                 android:id="@+id/etContent"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textview4"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:text="text4" />
+
+            <TextView
+                android:id="@+id/textview5"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:text="text5"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/btSwitch"
