--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/bg" />
 
     <LinearLayout
         android:id="@+id/llBottom"
         android:layout_width="match_parent"
+        android:fitsSystemWindows="true"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
@@ -22,62 +23,46 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:textSize="16sp"
             android:text="无需关注状态栏是否存在" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:animateLayoutChanges="true"
-            android:background="#fff"
+            android:background="#cfff"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textview1"
+            <ImageView
+                android:id="@+id/iv1"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:gravity="center"
+                android:padding="8dp"
+                android:scaleType="fitXY"
+                android:src="@mipmap/ic_button"
                 android:text="text1" />
 
-            <TextView
-                android:id="@+id/textview2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:gravity="center"
-                android:text="text2" />
+            <EditText
+                android:id="@+id/etContent"
+                android:layout_width="0dp"
+
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/textview3"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:gravity="center"
-                android:visibility="gone"
-                android:text="text3" />
+                android:text="Text" />
 
-            <EditText
-                android:id="@+id/etContent"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <TextView
-                android:id="@+id/textview4"
+            <ImageView
+                android:id="@+id/ivSwitch"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:gravity="center"
-                android:text="text4" />
-
-            <TextView
-                android:id="@+id/textview5"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:gravity="center"
-                android:text="text5"
-                android:visibility="gone" />
-
-            <Button
-                android:id="@+id/btSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:src="@mipmap/ic_emoji"
                 android:text="表情" />
         </LinearLayout>
 
@@ -99,14 +84,9 @@
                     android:layout_height="50dp"
                     android:layout_margin="8dp"
                     android:background="@color/colorAccent"
-                    android:text="face" />
+                    android:text="emoji" />
 
-                <TextView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="8dp"
-                    android:background="@color/colorAccent"
-                    android:text="face" />
+
             </LinearLayout>
         </com.lllic.keyboard.panel.PanelLayout>
     </LinearLayout>
